--- a/src/pages/game/index.module.css
+++ b/src/pages/game/index.module.css
@@ -1,28 +1,35 @@
-.board {
-  display: grid;
-  grid-template: repeat(8, 1fr) / repeat(8, 1fr);
-  width: 64vmin;
-  max-width: 640px;
-  aspect-ratio: 1;
-  overflow: hidden;
-  background-color: #3c8dbc;
-  box-shadow: 0 0 4px #0001;
-}
-.cell {
-  width: 100%;
-  height: 100%;
+.box {
+  padding: 0.5em 1em;
+  margin: 2em 0;
+  font-weight: bold;
+  color: #6091d3; /*文字色*/
+  background: #fff;
+  border: solid 3px #6091d3; /*線*/
+  border-radius: 10px; /*角の丸み*/
   display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  border: solid;
+  width: 60%;
+  margin: auto;
+}
+.box p {
+  margin: 0;
+  padding: 0;
 }
 
-.disc {
-  width: 80%;
-  height: 80%;
-  border-radius: 50%;
-  background-color: #fff;
-  box-shadow: 0 0 6px #0001;
-  border: solid;
+.btn {
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  margin: auto;
+  margin-top: 1rem;
+  padding: 1rem 4rem;
+  font-weight: bold;
+  border-radius: 100vh;
+  border-bottom: 7px solid #0686b2;
+  background: #27acd9;
+  color: #fff;
+}
+.btn:hover {
+  margin-top: 6px;
+  border-bottom: 1px solid #0686b2;
+  color: #fff;
 }
