--- a/src/pages/game/roomid.module.css
+++ b/src/pages/game/roomid.module.css
@@ -27,3 +27,31 @@
   box-shadow: 0 0 6px #0001;
   border: solid;
 }
+
+.btn {
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  margin: auto;
+  margin-top: 1rem;
+  padding: 1rem 4rem;
+  font-weight: bold;
+  border-radius: 100vh;
+  border-bottom: 7px solid #0686b2;
+  background: #27acd9;
+  color: #fff;
+}
+
+@media (max-width: 768px) {
+  .btn {
+    padding: 0.75rem 3rem;
+    margin-top: 0.5rem;
+    font-size: 0.9rem;
+  }
+}
+
+.btn:hover {
+  margin-top: 6px;
+  border-bottom: 1px solid #0686b2;
+  color: #fff;
+}
